<resources>
    <string name="app_name">Chat Dev-Intensive</string>
    <string name="prfile_label_rating">Рейтинг</string>
    <string name="prfile_label_respect">Уважение</string>
    <string name="profile_hint_directory_name">Директория</string>
    <string name="profile_hint_about_name">О себе</string>
    <string name="profile_hint_last_name">Фамилия</string>
    <string name="profile_hint_first_name">Имя</string>
</resources>
