<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".ui.profile.ProfileActivity" android:orientation="vertical">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/spacing_small_8">

        <ru.skillbranch.devintensive.ui.custom.AspectRatioImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_bg"
                android:alpha="0.5"
                app:aspectRatio="1.78"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top">

            <ImageButton
                    android:layout_width="@dimen/button_size_large"
                    android:layout_height="@dimen/button_size_large"
                    android:layout_marginTop="36dp"
                    android:layout_marginRight="@dimen/spacing_huge_32"
                    android:layout_toLeftOf="@+id/iv_avatar"
                    android:background="@drawable/btn_round_bg"
                    android:src="@drawable/ic_brightness_high_black_24dp"/>

            <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="@dimen/button_size_x_large"
                    android:layout_height="@dimen/button_size_x_large"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_account_circle_black_24dp"/>

            <ImageButton
                    android:layout_width="@dimen/button_size_large"
                    android:layout_height="@dimen/button_size_large"
                    android:layout_marginLeft="@dimen/spacing_huge_32"
                    android:layout_marginTop="36dp"
                    android:layout_toRightOf="@+id/iv_avatar"
                    android:background="@drawable/btn_round_bg"
                    android:src="@drawable/ic_edit_black_24dp"/>

            <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_avatar"
                    android:layout_centerHorizontal="true"
                    android:text="Test Test"
                    style="@style/Profile.Rank"/>

            <TextView
                    android:id="@+id/tv_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_name"
                    android:layout_centerHorizontal="true"
                    android:text="Junior Android Developer"
                    style="@style/Profile.NickName"/>
        </RelativeLayout>

    </FrameLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_gray_light"
            android:paddingTop="@dimen/spacing_normal_16"
            android:paddingBottom="@dimen/spacing_normal_16">
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
            <TextView
                    style="@style/Profile.Metrics.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_name"
                    android:layout_centerHorizontal="true"
                    android:drawableLeft="@drawable/ic_stars_black_24dp"
                    android:text="0"/>
            <TextView
                    style="@style/Profile.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_name"
                    android:layout_centerHorizontal="true"
                    android:text="@string/prfile_label_rating"/>

        </LinearLayout>
        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:layout_marginBottom="@dimen/spacing_normal_16"
                android:background="@android:color/white"/>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
            <TextView
                    style="@style/Profile.Metrics.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_name"
                    android:layout_centerHorizontal="true"
                    android:text="0"
                    android:drawableLeft="@drawable/ic_stars_black_24dp"/>
            <TextView
                    style="@style/Profile.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_name"
                    android:layout_centerHorizontal="true"
                    android:text="@string/prfile_label_respect"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal_16">
        <ImageView
                android:id="@+id/ic_avatar"
                android:layout_width="@dimen/button_size_medium"
                android:layout_height="@dimen/button_size_medium"
                android:src="@drawable/ic_accessibility_black_24dp"/>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wr_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ic_avatar"
                android:layout_marginLeft="@dimen/spacing_normal_16">
            <EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_first_name"
                    android:text=""
                    style="@style/Profile.EditText"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wr_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ic_avatar"
                android:layout_below="@id/wr_first_name"
                android:layout_marginLeft="@dimen/spacing_normal_16">
            <EditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_last_name"
                    style="@style/Profile.EditText.Single"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="72dp"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:padding="@dimen/spacing_normal_16">
        <ImageView
                android:layout_width="@dimen/button_size_medium"
                android:layout_height="@dimen/button_size_medium"
                android:src="@drawable/ic_view_headline_black_24dp"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_about"
                android:layout_below="@id/wr_first_name"
                android:layout_marginLeft="@dimen/spacing_normal_16">
            <EditText
                    android:id="@+id/et_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_about_name"
                    style="@style/Profile.EditText.Multiline"
                    android:inputType="textMultiLine"
                    android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="72dp"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:padding="@dimen/spacing_normal_16">
        <ImageView
                android:layout_width="@dimen/button_size_medium"
                android:layout_height="@dimen/button_size_medium"
                android:src="@drawable/ic_folder_black_24dp"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_about"
                android:layout_below="@id/wr_first_name"
                android:layout_marginLeft="@dimen/spacing_normal_16">
            <EditText
                    android:id="@+id/et_repository"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_directory_name"
                    style="@style/Profile.EditText.Single"
                    android:inputType="textUri"
                    android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_remove_red_eye_black_24dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="Watched"/>
    </LinearLayout>

</LinearLayout>